Naver SEO update

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
     <!-- CSS import -->
     <link rel="stylesheet" href="{% static 'css/import.css' %}">   <!-- main_tmp/css/import.css -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Naver SEO -->
+    <meta name="naver-site-verification" content="25c502c24eeda9f190fd2879c79207d1e417af36" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-825K7FEKWT"></script>
     <script>
