--- a/templates/mobile_template/base.html
+++ b/templates/mobile_template/base.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Naver SEO-->
+    <meta name="naver-site-verification" content="25c502c24eeda9f190fd2879c79207d1e417af36" />
     <!-- Iphone 모바일 확대 방지 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0">
     <!-- jQuery CDN -->
