--- a/templates/mobile_template/oneroom/oneroom_detail.html
+++ b/templates/mobile_template/oneroom/oneroom_detail.html
@@ -204,7 +204,7 @@
             <div class="modal_bg"></div>
             <div class="oneroom_detail_modal_content">
                 <div class="modal_header"><span class="modal_close_btn">×</span></div>
-                <div class="modal_body">010-1111-2222</div>
+                <div class="modal_body">{{ data.0.owner_contact }}</div>
             </div>
         </div>
     </div>
