image slider edited

--- a/templates/mobile_template/main/index.html
+++ b/templates/mobile_template/main/index.html
@@ -460,7 +460,7 @@
 
     <nav>
         <ul>
-            <li><a href="https://m.toch.kr/oneroom/">원룸</a></li>
+            <li><a href="{% url 'mobile_oneroom' %}">원룸</a></li>
             <li><a href="#">중고</a></li>
             <li class="home"><a href="{% url 'mobile_index' %}">홈</a></li>
             <li><a href="#">커뮤니티</a></li>
