--- a/static/mobile/css/room-list.css
+++ b/static/mobile/css/room-list.css
@@ -25,9 +25,26 @@
     bottom: -100%;
 }
 
-/* oneroom detail modal */
-.oneroom_detail_modal_container {
+.copy_modal {
+    visibility: hidden;
+    text-align: center;
+    height: 35px;
+    width: 100px;
+    line-height: 35px;
+    position: fixed;
+    bottom: -100%;
+    left: 50%;
+    background-color: black;
+    opacity: 0.7;
+    transform: translateX(-50%);
+    border-radius: 25px;
+    color: white;
+    transition: all 0.3s;
+}
 
+.copy_message {
+    visibility: visible;
+    bottom: 15%;
 }
 
 .modal_bg {
