like based on ip(1day)

--- a/templates/mobile_template/oneroom/oneroom_detail.html
+++ b/templates/mobile_template/oneroom/oneroom_detail.html
@@ -25,7 +25,7 @@
                         <a href="{% url 'mobile_oneroom_like' data.0.id %}">
                             <div class="imgBox heartIcon">하트 아이콘</div>
                         </a>
-                        <span>{{ data.0.status_set.last.like }}</span>
+                        <span>{{ like.count }}</span>
                     </div>
                 </div>
 
