--- a/templates/mobile_template/oneroom/oneroom_detail.html
+++ b/templates/mobile_template/oneroom/oneroom_detail.html
@@ -85,13 +85,13 @@
                     <li>
                         <dl>
                             <dt>건물 주차</dt>
-                            <dd>{% if data.0.parking == 0 %} 불가능 {% else %} 가능 {% endif %}</dd>
+                            <dd>{% if data.0.parking == false %} 불가능 {% else %} 가능 {% endif %}</dd>
                         </dl>
                     </li>
                     <li>
                         <dl>
                             <dt>엘리베이터</dt>
-                            <dd>{% if data.0.elevator == 0 %} 없음 {% else %} 있음 {% endif %}</dd>
+                            <dd>{% if data.0.elevator == false %} 없음 {% else %} 있음 {% endif %}</dd>
                         </dl>
                     </li>
                     <li>
