--- a/static/mobile/css/page.css
+++ b/static/mobile/css/page.css
@@ -151,7 +151,7 @@
 .oneRoomPage .detailArea > div:not(.bx-wrapper):not(:last-child){margin-bottom: 1.250rem;}
 
 .oneRoomPage .detailArea .bx-wrapper{border-bottom: 0.063rem solid #b8b8b8;}
-.oneRoomPage .detailArea .bx-wrapper .bx-pager{left: 50%; bottom:1.875rem; width: 7.500rem; line-height: 2.813rem; background-color: rgba(0, 0, 0, 0.6); border-radius: 6.250rem; transform: translateX(-50%); padding: 0;}
+.oneRoomPage .detailArea .bx-wrapper .bx-pager{left: 50%; bottom:1.875rem; width: auto; line-height: 2.813rem; background-color: rgba(0, 0, 0, 0.6); border-radius: 6.250rem; transform: translateX(-50%); padding: 0;}
 .oneRoomPage .detailArea .bx-wrapper .bx-pager .bx-pager-item{vertical-align: middle;}
 .oneRoomPage .detailArea .bx-wrapper .bx-pager .bx-pager-item a{width: 0.875rem; height: 0.875rem; background-color: white; border-radius: 100%; opacity: 0.4;}
 .oneRoomPage .detailArea .bx-wrapper .bx-pager .bx-pager-item a.active{opacity: 1;}
