--- a/templates/mobile_template/oneroom/oneroom.html
+++ b/templates/mobile_template/oneroom/oneroom.html
@@ -5,6 +5,23 @@
         <div class="oneRoomArea">
             <!-- Kakao Map -->
             <div class="kakao_map">
+                <div class="oneroom_table_btn">more</div>
+                <div class="oneroom_table_container">
+                    <table class="oneroom_table">
+                        <tr>
+                            <td class="table_head">원룸 이름</td>
+                            <td class="table_head">연락처</td>
+                        </tr>
+                        <tr>
+                            <td>첫번째 칸</td>
+                            <td>두번째 칸</td>
+                        </tr>
+                        <tr>
+                            <td>첫번째 칸</td>
+                            <td>두번째 칸</td>
+                        </tr>
+                    </table>
+                </div>
                 <!-- SINGLE LIST -->
                 <div class="single_list_container">
                     <ul class="oneroom_single_list_ul"></ul>
