--- a/static/mobile/css/marker.css
+++ b/static/mobile/css/marker.css
@@ -13,12 +13,12 @@
 
 }
 
-.custom_overlay:hover {
-  border : 1px solid black;
-  cursor: pointer;
-  transition: all 0.2s;
-  opacity: 1;
-}
+/*.custom_overlay:hover {*/
+/*  border : 1px solid black;*/
+/*  cursor: pointer;*/
+/*  transition: all 0.2s;*/
+/*  opacity: 1;*/
+/*}*/
 
 .marker_clicked {
   border : 1px solid black;
