--- a/static/mobile/css/room-list.css
+++ b/static/mobile/css/room-list.css
@@ -25,6 +25,7 @@
     bottom: -100%;
 }
 
+/* 복사하기 */
 .copy_modal {
     visibility: hidden;
     text-align: center;
@@ -47,6 +48,7 @@
     bottom: 15%;
 }
 
+/* MODAL */
 .modal_bg {
     background-color: black;
     opacity: 0.6;
@@ -59,7 +61,7 @@
 
 .oneroom_detail_modal_content {
     width: 30rem;
-    height: 30rem;
+    height: 20rem;
     background-color: white;
     position: fixed;
     top: 50%;
@@ -83,6 +85,13 @@
     text-underline-position: under;
 }
 
+.modal_footer {
+    display: flex;
+    justify-content: center;
+    bottom: 0;
+    margin-top: 20px;
+}
+
 .modal_close_btn:hover {
     cursor: pointer;
     opacity: 0.7;
@@ -97,4 +106,14 @@
     display: none;
 }
 
-
+/* SMS & CALL */
+.oneroom_call_btn, .oneroom_sms_btn {
+    border: 1px solid black;
+    text-align: center;
+    line-height: 25px;
+    width: fit-content;
+    height: fit-content;
+    padding: 5px 10px;
+    font-size: 17px;
+    margin: 0 15px;
+}
