--- a/templates/mobile_template/oneroom/oneroom_detail.html
+++ b/templates/mobile_template/oneroom/oneroom_detail.html
@@ -234,11 +234,38 @@
             <div class="oneroom_detail_modal_content">
                 <div class="modal_header"><span class="modal_close_btn">×</span></div>
                 <div class="modal_body">{{ data.0.owner_contact }}</div>
+                <div class="modal_footer">
+                    <div class="oneroom_sms_btn">문자하기</div>
+                    <div class="oneroom_call_btn">전화하기</div>
+                </div>
             </div>
         </div>
 
         <div class="copy_modal">복사되었습니다.</div>
     </div>
+    <script>
+        const owner_contact = "{{ data.0.owner_contact }}";
+        const modal_footer = document.querySelector('.modal_footer');
+        modal_footer.addEventListener('click', e => {
+            const message = '안녕하세요 Toch보고 연락드립니다!\n'
+            if (e.target.className === 'oneroom_sms_btn') {
+                location.href = 'sms:' + owner_contact + (checkOs() == 'ios' ? '&' : '?') + 'body='+ message;
+            } else if (e.target.className === 'oneroom_call_btn') {
+                location.href=`tel:${owner_contact}`;
+            }
+        })
+
+        function checkOs() {
+            const userOs = navigator.userAgent.toLowerCase();
+            if (userOs.indexOf('android') !== -1) {
+                return "android";
+            } else if (userOs.indexOf("iphone") > -1 || userOs.indexOf("ipad") > -1 || userOs.indexOf("mac") > -1) {
+                return "ios";
+            } else {
+                return "other";
+            }
+        }
+    </script>
     <script src="{% static 'mobile/js/oneroom-detail-modal.js' %}"></script>
     <script>
         $(document).ready(function () {
