--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
-
+    <!-- redirect to "m.toch" -->
+    <script srr="{% static "scripts/check-env.js" %}"></script>
     <!-- CSS import -->
     <link rel="stylesheet" href="{% static 'css/import.css' %}">   <!-- main_tmp/css/import.css -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
