--- a/templates/mobile_template/oneroom/oneroom_edit.html
+++ b/templates/mobile_template/oneroom/oneroom_edit.html
@@ -8,7 +8,32 @@
                     -webkit-appearance: checkbox;
                     -webkit-appearance: button;
                 }
+
+                .oneRoomArea {
+                    font-weight: bold;
+                    font-size: 23px;
+                    overflow: auto;
+                }
+
+                .option_checkBox, .facility_checkBox {
+                    font-size: 18px;
+                }
+
+                .edit_option_container {
+                    margin-top: 30px;
+                    width: 100%;
+                    height: fit-content;
+                    display: flex;
+                    justify-content: center;
+                }
+
             </style>
+            {#            <h1>#}
+            {#                {% for i in data %}#}
+            {#                    <option value="{{ i.id }}">{{ i.post }}</option>#}
+            {#                {% endfor %}#}
+            {#            </h1>#}
+
             <select name="title" onchange="inputChange(this.value)">
                 {% for i in data %}
                     <option value="{{ i.id }}">{{ i.post }}</option>
@@ -17,9 +42,9 @@
             <form method="post">
                 <!-- 남은 방 개수 -->
 
-                <div class="selectBox" style="margin: 30px 0">
+                <div class="selectBox" style="margin: 30px 0; width: 200px; margin: 0 auto; text-align: center">
                     - 남은 방 개수 -
-                    <br><br>
+                    <br>
                     <select id="remain_count" name="remain" class="select">
                         <option disabled selected>----- 선택 -----</option>
                         <option value="1">1</option>
@@ -54,47 +79,60 @@
                         <option value="30">30</option>
                     </select>
                 </div>
-                <!-- 옵션 -->
-                <p style="margin: 15px">
-                    - 옵션 -
-                <div class="option_checkBox">
-                    <label for="aircon">에어컨</label>
-                    <input type="checkbox" id="aricon">
-                    <label for="washer">세탁기</label>
-                    <input type="checkbox" id="washer">
-                    <label for="">냉장고</label>
-                    <input type="checkbox" id="">
-                    <label for="">책상</label>
-                    <input type="checkbox" id="">
-                    <label for="">옷장</label>
-                    <input type="checkbox" id="">
-                    <label for="">신발장</label>
-                    <input type="checkbox" id="">
-                    <label for="">인덕션</label>
-                    <input type="checkbox" id="">
-                </div>
-                </p>
+                <div class="edit_option_container">
+                    <!-- 옵션 -->
+                    <p style="margin: 15px">
+                    <div class="option_checkBox">
+                        <p style="margin-bottom: 20px">- 옵션 -</p>
+                        <label for="aircon">에어컨</label>
+                        <input type="checkbox" id="aricon">
+                        <br><br>
+                        <label for="washer">세탁기</label>
+                        <input type="checkbox" id="washer">
+                        <br><br>
+                        <label for="">냉장고</label>
+                        <input type="checkbox" id="">
+                        <br><br>
+                        <label for="">책상</label>
+                        <input type="checkbox" id="">
+                        <br><br>
+                        <label for="">옷장</label>
+                        <input type="checkbox" id="">
+                        <br><br>
+                        <label for="">신발장</label>
+                        <input type="checkbox" id="">
+                        <br><br>
+                        <label for="">인덕션</label>
+                        <input type="checkbox" id="">
+                    </div>
+                    </p>
 
-                <!-- 시설-->
-                <br>
-                <br>
-                <p style="margin: 15px">
-                    - 안전 시설 -
-                <div class="facility_checkBox">
-                    <label for="video_phone">비디오폰</label>
-                    <input type="checkbox" id="video_phone">
-                    <label for="front_door">공동현관</label>
-                    <input type="checkbox" id="front_door">
-                    <label for="cctv">CCTV</label>
-                    <input type="checkbox" id="cctv">
-                    <label for="fire_alarm">화재경보기</label>
-                    <input type="checkbox" id="fire_alarm">
-                    <label for="gas_alarm">가스누출경보기</label>
-                    <input type="checkbox" id="gas_alarm">
+                    <!-- 시설-->
+                    <br>
+                    <br>
+                    <p style="margin: 15px">
+                    <div class="facility_checkBox">
+                        <p style="margin-bottom: 20px">- 안전 시설 -</p>
+                        <label for="video_phone">비디오폰</label>
+                        <input type="checkbox" id="video_phone">
+                        <br><br>
+                        <label for="front_door">공동현관</label>
+                        <input type="checkbox" id="front_door">
+                        <br><br>
+                        <label for="cctv">CCTV</label>
+                        <input type="checkbox" id="cctv">
+                        <br><br>
+                        <label for="fire_alarm">화재경보기</label>
+                        <input type="checkbox" id="fire_alarm">
+                        <br><br>
+                        <label for="gas_alarm">가스누출경보기</label>
+                        <input type="checkbox" id="gas_alarm">
+                    </div>
+                    </p>
                 </div>
-                </p>
 
-                <button style="background-color: #ff9900; color: white; width: 45px; height: 20px; border-radius: 2px; margin: 50px auto; display: block">
+
+                <button style="background-color: #ff9900; color: black; width: 120px; height: fit-content; border-radius: 2px; margin: 30px auto; display: block; padding: 10px">
                     수정하기
                 </button>
             </form>
