보아스 랜드마크 사진 추가

--- a/templates/mobile_template/oneroom/oneroom_detail.html
+++ b/templates/mobile_template/oneroom/oneroom_detail.html
@@ -39,7 +39,7 @@
                         </dl>
                         <dl>
                             <dt>관리비</dt>
-                            <dd>{% if data.0.manage_amount %}{{ data.0.manage_amount }}{% else %}비공개{% endif %}</dd>
+                            <dd>{% if data.0.manage_amount %}{{ data.0.manage_amount }}원{% else %}비공개{% endif %}</dd>
                         </dl>
                         <button class="contact_btn">연락처 보기</button>
                     </li>
