--- a/static/mobile/css/table.css
+++ b/static/mobile/css/table.css
@@ -3,8 +3,8 @@
     top: 5%;
     left: 2%;
     width: 45px;
-    height: 40px;
-    line-height: 40px;
+    height: 45px;
+    line-height: 45px;
     background-color: black;
     border-radius: 50%;
     z-index: 2;
@@ -14,11 +14,10 @@
 }
 
 .oneroom_table_container {
-    margin-top: 5px;
     display: flex;
     justify-content: center;
-    position: fixed;
-    top: 20%;
+    position: relative;
+    top: 7%;
     left: 2%;
     width: 96%;
     height: 55%;
