--- a/templates/mobile_template/base.html
+++ b/templates/mobile_template/base.html
@@ -16,6 +16,15 @@
     <script src="{% static 'mobile/js/com.js' %}"></script>
     <!-- CSS import -->
     <link rel="stylesheet" href="{% static 'mobile/css/import.css' %}">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-825K7FEKWT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-825K7FEKWT');
+    </script>
     <title>원룸 - toch</title>
 </head>
 <body>
